Fix menu item order on tablet and mobile
This was piggy-backed in 3eaa0db under "portal-only adaptions".

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1219,12 +1219,6 @@ section:focus >,
   }
 }
 
-@media (max-width: 991px) {
-  .navbar-nav {
-    flex-direction: column-reverse;
-  }
-}
-
 /* navbar
  =================================================================== */
 
